# trip-poc-dapp

./: Cargo.toml  Dockerfile  README.md  docker-bake.override.hcl
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dapp.json  deploy-testnet.yml  docker-bake.override.hcl  docker-compose-host.yml  docker-compose-testnet.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
backend/deployments/goerli/: parking-dapp.address  parking-dapp.json  trip_poc.address
backend/deployments/localhost/: Bank.json  Bitmask.json  BitsManipulation.json  CartesiDAppFactory.json  CartesiMath.json  CartesiToken.json  DiamondCutFacet.json  DiamondInit.json  DiamondLoupeFacet.json  ERC20PortalFacet.json  ERC721PortalFacet.json  EtherPortalFacet.json  FeeManagerFacet.json  InputFacet.json  LibClaimsMask.json  LibDiamond.json  LibDisputeManager.json  LibFeeManager.json  LibInput.json  LibOutput.json  LibRollups.json  LibValidatorManager.json  Merkle.json  MineTimelock.json  OutputFacet.json  OwnershipFacet.json  RollupsFacet.json  SimpleFaucet.json  ValidatorManagerFacet.json  WorkerAuthManagerImpl.json  WorkerManagerAuthManagerImpl.json  WorkerManagerImpl.json
backend/docker/: Dockerfile
backend/migrations/2022-08-24-124143_create_zones/: down.sql  up.sql
backend/migrations/2022-08-30-085900_seed_zones/: down.sql  up.sql
backend/migrations/2022-09-21-112455_create_tickets/: down.sql  up.sql
backend/migrations/2022-10-10-170446_create_balances/: down.sql  up.sql
backend/migrations/2022-10-11-122124_seed_balances/: down.sql  up.sql
backend/migrations/2022-11-17-142806_create_super_wallets/: down.sql  up.sql
backend/migrations/2022-11-17-142812_seed_super_wallets/: up.sql
backend/migrations/2022-11-18-124523_create_proposals/: down.sql  up.sql
backend/migrations/2022-11-18-173033_create_proposal_votes/: down.sql  up.sql
backend/migrations/2022-11-24-104915_create_vouchers/: down.sql  up.sql
backend/migrations/2022-11-24-135701_create_env_vars/: down.sql  up.sql
backend/network_env/: env.goerli
backend/src/: core.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs  structures.rs
backend/src/balance_module/: mod.rs
backend/src/helper/: mod.rs
backend/src/mod/: proposals.rs
backend/src/ticket_module/: mod.rs
backend/src/voucher_module/: mod.rs
backend/src/zone_module/: mod.rs
deployments/localhost/: Bank.json  Bitmask.json  BitsManipulation.json  CartesiDAppFactory.json  LibInput.json  (+27 more)
frontend/: .env  .gitignore  README.md  codegen.yml  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
resources/: cracow_zone_1.geojson  cracow_zone_2.geojson  cracow_zone_3.geojson  instructions.txt
src/: main.rs
(+112 files in other folders)
