[package]
name = "point_in_polygon_dapp_paid_parking_assistant"
version = "0.2.0"
edition = "2021"
authors = [
    "Kamil Zawadzki <kamil.zawadzki@authentic-studio.com>",
    "Karol Pietruszka <karol.pietruszka@webchefs.tech>",
    "Dawid Mazur <dawid.mazur@webchefs.tech>",
]

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
hex = { version = "0.4.3" }
geo = { version = "0.23.0" }
geojson = { version = "*", features = ["geo-types"] }
geo-types = "*"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethabi = { git = "https://github.com/rust-ethereum/ethabi" }

